--- a/main.html
+++ b/main.html
@@ -3,11 +3,23 @@
 <html>
 
 <head>
+	<title>Shopping & Holiday</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h2>Things I Want to Buy</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Headphones</li>
+    </ol>
+    <h2>Places I Want to Visit</h2>
+    <ul>
+        <li data-ns-test="holidayList">Varanasi</li>
+        <li data-ns-test="holidayList">Bali</li>
+        <li data-ns-test="holidayList">Hampi</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
